[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lariat"
version = "0.1.1"
authors = [{ name = "Zetier" }]
description = "Python utility for interfacing with the Device Farmer API"
readme = "README.md"
dependencies = ['bravado==11.0.*', 'adb-shell==0.4.*', 'types-urllib3==1.26.*']
requires-python = ">=3.8"

classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]

keywords = [
    'lariat',
    'devicefarmer',
    'stf',
    'automation',
    'android',
    'testing',
    'openstf',
]

[project.urls]
"Homepage" = "https://github.com/Zetier/lariat"
"Bug Tracker" = "https://github.com/Zetier/lariat/issues"

[project.scripts]
lariat = "lariat.lariat:main"
